--- a/assets/output.css
+++ b/assets/output.css
@@ -513,22 +513,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.tw-m-auto {
-  margin: auto;
-}
-
 .tw-my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.tw-my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.tw-mt-3 {
-  margin-top: 0.75rem;
 }
 
 .tw-mt-4 {
@@ -543,104 +530,46 @@ video {
   display: none;
 }
 
+.tw-h-\[22rem\] {
+  height: 22rem;
+}
+
 .tw-h-9 {
   height: 2.25rem;
-}
-
-.tw-h-96 {
-  height: 24rem;
-}
-
-.tw-h-6 {
-  height: 1.5rem;
-}
-
-.tw-h-64 {
-  height: 16rem;
-}
-
-.tw-h-72 {
-  height: 18rem;
-}
-
-.tw-h-80 {
-  height: 20rem;
-}
-
-.tw-h-3 {
-  height: 0.75rem;
 }
 
 .tw-h-10 {
   height: 2.5rem;
 }
 
-.tw-h-8 {
-  height: 2rem;
-}
-
-.tw-h-\[80\] {
-  height: 80;
-}
-
-.tw-h-\[22rem\] {
-  height: 22rem;
-}
-
-.tw-h-\[23rem\] {
-  height: 23rem;
-}
-
 .tw-min-h-screen {
   min-height: 100vh;
-}
-
-.tw-w-64 {
-  width: 16rem;
-}
-
-.tw-w-96 {
-  width: 24rem;
-}
-
-.tw-w-8 {
-  width: 2rem;
-}
-
-.tw-w-80 {
-  width: 20rem;
-}
-
-.tw-w-9 {
-  width: 2.25rem;
-}
-
-.tw-w-\[\] {
-  width: ;
 }
 
 .tw-w-\[22rem\] {
   width: 22rem;
 }
 
-.tw-w-3 {
-  width: 0.75rem;
-}
-
-.tw-w-10 {
-  width: 2.5rem;
-}
-
-.tw-w-11\/12 {
-  width: 91.666667%;
+.tw-w-9 {
+  width: 2.25rem;
 }
 
 .tw-w-full {
   width: 100%;
 }
 
+.tw-w-10 {
+  width: 2.5rem;
+}
+
 .tw-cursor-pointer {
   cursor: pointer;
+}
+
+.tw-select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .tw-flex-row {
@@ -655,10 +584,6 @@ video {
   align-items: center;
 }
 
-.tw-items-stretch {
-  align-items: stretch;
-}
-
 .tw-justify-center {
   justify-content: center;
 }
@@ -667,24 +592,8 @@ video {
   justify-content: space-between;
 }
 
-.tw-justify-evenly {
-  justify-content: space-evenly;
-}
-
-.tw-gap-5 {
-  gap: 1.25rem;
-}
-
-.tw-rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .tw-rounded-3xl {
   border-radius: 1.5rem;
-}
-
-.tw-rounded {
-  border-radius: 0.25rem;
 }
 
 .tw-rounded-full {
@@ -696,31 +605,8 @@ video {
   background-color: hsl(216 12% 8% / var(--tw-bg-opacity));
 }
 
-.tw-bg-ir-dark-blue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(213 19% 18% / var(--tw-bg-opacity));
-}
-
-.tw-bg-ir-medium-grey {
-  --tw-bg-opacity: 1;
-  background-color: hsl(216 12% 54% / var(--tw-bg-opacity));
-}
-
-.tw-bg-ir-medium-grey\/10 {
-  background-color: hsl(216 12% 54% / 0.1);
-}
-
-.tw-bg-ir-medium-grey\/30 {
-  background-color: hsl(216 12% 54% / 0.3);
-}
-
 .tw-bg-ir-medium-grey\/20 {
   background-color: hsl(216 12% 54% / 0.2);
-}
-
-.tw-bg-ir-light-grey {
-  --tw-bg-opacity: 1;
-  background-color: hsl(217 12% 63% / var(--tw-bg-opacity));
 }
 
 .tw-bg-ir-light-grey\/20 {
@@ -736,98 +622,27 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-.tw-from-ir-dark-blue {
-  --tw-gradient-from: hsl(213, 19%, 18%);
-  --tw-gradient-to: hsl(213 19% 18% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.tw-from-ir-dark-blue\/50 {
-  --tw-gradient-from: hsl(213 19% 18% / 0.5);
-  --tw-gradient-to: hsl(213 19% 18% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .tw-from-ir-dark-blue\/40 {
   --tw-gradient-from: hsl(213 19% 18% / 0.4);
   --tw-gradient-to: hsl(213 19% 18% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.tw-to-ir-medium-grey {
-  --tw-gradient-to: hsl(216, 12%, 54%);
-}
-
-.tw-to-ir-medium-grey\/5 {
-  --tw-gradient-to: hsl(216 12% 54% / 0.05);
-}
-
-.tw-to-ir-very-dark-blue {
-  --tw-gradient-to: hsl(216, 12%, 8%);
-}
-
-.tw-to-ir-very-dark-blue\/50 {
-  --tw-gradient-to: hsl(216 12% 8% / 0.5);
-}
-
 .tw-to-ir-dark-blue {
   --tw-gradient-to: hsl(213, 19%, 18%);
-}
-
-.tw-p-4 {
-  padding: 1rem;
-}
-
-.tw-p-6 {
-  padding: 1.5rem;
 }
 
 .tw-p-7 {
   padding: 1.75rem;
 }
 
-.tw-p-2 {
-  padding: 0.5rem;
-}
-
-.tw-p-3 {
-  padding: 0.75rem;
-}
-
-.tw-p-1 {
-  padding: 0.25rem;
-}
-
-.tw-p-\[\] {
-  padding: ;
-}
-
-.tw-p-\[0\.6rem\] {
-  padding: 0.6rem;
-}
-
 .tw-p-\[0\.65rem\] {
   padding: 0.65rem;
-}
-
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .tw-px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.tw-px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.tw-px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
 }
 
 .tw-py-3 {
@@ -839,39 +654,31 @@ video {
   text-align: center;
 }
 
-.tw-text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.tw-text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .tw-text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.tw-text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .tw-font-bold {
   font-weight: 700;
 }
 
-.tw-font-semibold {
-  font-weight: 600;
-}
-
 .tw-uppercase {
   text-transform: uppercase;
 }
 
-.tw-tracking-wide {
-  letter-spacing: 0.025em;
-}
-
 .tw-tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .tw-text-ir-medium-grey {
@@ -884,15 +691,6 @@ video {
   color: hsl(217 12% 63% / var(--tw-text-opacity));
 }
 
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.tw-text-white\/40 {
-  color: rgb(255 255 255 / 0.4);
-}
-
 .tw-text-white\/50 {
   color: rgb(255 255 255 / 0.5);
 }
@@ -903,4 +701,85 @@ video {
 
 .tw-underline-offset-2 {
   text-underline-offset: 2px;
+}
+
+.tw-transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.tw-duration-500 {
+  transition-duration: 500ms;
+}
+
+.tw-duration-300 {
+  transition-duration: 300ms;
+}
+
+.tw-duration-200 {
+  transition-duration: 200ms;
+}
+
+.hover\:tw-bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:tw-bg-ir-orange:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(25 97% 53% / var(--tw-bg-opacity));
+}
+
+.hover\:tw-text-ir-orange:hover {
+  --tw-text-opacity: 1;
+  color: hsl(25 97% 53% / var(--tw-text-opacity));
+}
+
+.hover\:tw-text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.active\:tw-bg-ir-light-grey:active {
+  --tw-bg-opacity: 1;
+  background-color: hsl(217 12% 63% / var(--tw-bg-opacity));
+}
+
+.tw-group:hover .group-hover\:tw-bg-ir-light-grey {
+  --tw-bg-opacity: 1;
+  background-color: hsl(217 12% 63% / var(--tw-bg-opacity));
+}
+
+.tw-group:hover .group-hover\:tw-bg-ir-orange {
+  --tw-bg-opacity: 1;
+  background-color: hsl(25 97% 53% / var(--tw-bg-opacity));
+}
+
+.tw-group:hover .group-hover\:tw-text-ir-light-grey {
+  --tw-text-opacity: 1;
+  color: hsl(217 12% 63% / var(--tw-text-opacity));
+}
+
+.tw-group:hover .group-hover\:tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
