--- a/assets/output.css
+++ b/assets/output.css
@@ -513,18 +513,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.tw-m-auto {
-  margin: auto;
-}
-
 .tw-my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.tw-mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .tw-my-3 {
@@ -534,10 +525,6 @@ video {
 
 .tw-mt-4 {
   margin-top: 1rem;
-}
-
-.tw-block {
-  display: block;
 }
 
 .tw-flex {
@@ -560,24 +547,40 @@ video {
   height: 2.5rem;
 }
 
-.tw-h-0 {
-  height: 0px;
+.tw-h-8 {
+  height: 2rem;
+}
+
+.tw-h-1\/3 {
+  height: 33.333333%;
+}
+
+.tw-h-2\/3 {
+  height: 66.666667%;
+}
+
+.tw-h-\[2\/3\] {
+  height: 2/3;
+}
+
+.tw-h-\[\] {
+  height: ;
+}
+
+.tw-h-\[55\%\] {
+  height: 55%;
+}
+
+.tw-h-\[50\%\] {
+  height: 50%;
+}
+
+.tw-h-\[45\%\] {
+  height: 45%;
 }
 
 .tw-h-2 {
   height: 0.5rem;
-}
-
-.tw-h-6 {
-  height: 1.5rem;
-}
-
-.tw-h-7 {
-  height: 1.75rem;
-}
-
-.tw-h-8 {
-  height: 2rem;
 }
 
 .tw-min-h-screen {
@@ -600,36 +603,18 @@ video {
   width: 2.5rem;
 }
 
-.tw-w-14 {
-  width: 3.5rem;
-}
-
-.tw-w-3 {
-  width: 0.75rem;
-}
-
-.tw-w-32 {
-  width: 8rem;
-}
-
-.tw-w-4\/5 {
-  width: 80%;
-}
-
-.tw-w-5\/6 {
-  width: 83.333333%;
-}
-
-.tw-w-52 {
-  width: 13rem;
-}
-
-.tw-w-24 {
-  width: 6rem;
-}
-
 .tw-w-36 {
   width: 9rem;
+}
+
+@keyframes tw-spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.tw-animate-spin {
+  animation: tw-spin 1s linear infinite;
 }
 
 .tw-cursor-pointer {
@@ -688,22 +673,23 @@ video {
   background-color: hsl(25 97% 53% / var(--tw-bg-opacity));
 }
 
+.tw-bg-ir-medium-grey\/10 {
+  background-color: hsl(216 12% 54% / 0.1);
+}
+
+.tw-bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
 .tw-bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.tw-bg-ir-medium-grey {
+.tw-bg-gray-50 {
   --tw-bg-opacity: 1;
-  background-color: hsl(216 12% 54% / var(--tw-bg-opacity));
-}
-
-.tw-bg-ir-medium-grey\/10 {
-  background-color: hsl(216 12% 54% / 0.1);
-}
-
-.tw-bg-ir-light-grey\/10 {
-  background-color: hsl(217 12% 63% / 0.1);
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .tw-bg-gradient-to-t {
@@ -728,20 +714,8 @@ video {
   padding: 0.65rem;
 }
 
-.tw-p-3 {
-  padding: 0.75rem;
-}
-
 .tw-p-4 {
   padding: 1rem;
-}
-
-.tw-p-2 {
-  padding: 0.5rem;
-}
-
-.tw-p-1 {
-  padding: 0.25rem;
 }
 
 .tw-px-4 {
@@ -754,39 +728,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.tw-px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.tw-px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.tw-py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.tw-py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.tw-py-\[0\.3rem\] {
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-}
-
 .tw-px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .tw-text-center {
@@ -801,11 +745,6 @@ video {
 .tw-text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.tw-text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .tw-font-bold {
@@ -835,21 +774,12 @@ video {
   color: hsl(217 12% 63% / var(--tw-text-opacity));
 }
 
-.tw-text-white\/50 {
-  color: rgb(255 255 255 / 0.5);
-}
-
-.tw-text-ir-orange {
-  --tw-text-opacity: 1;
-  color: hsl(25 97% 53% / var(--tw-text-opacity));
-}
-
-.tw-text-ir-orange\/70 {
-  color: hsl(25 97% 53% / 0.7);
-}
-
 .tw-text-ir-orange\/90 {
   color: hsl(25 97% 53% / 0.9);
+}
+
+.tw-text-white\/50 {
+  color: rgb(255 255 255 / 0.5);
 }
 
 .tw-underline {
@@ -860,10 +790,42 @@ video {
   text-underline-offset: 2px;
 }
 
+.tw-opacity-0 {
+  opacity: 0;
+}
+
+.tw-opacity-100 {
+  opacity: 1;
+}
+
 .tw-transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.tw-transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-delay-200 {
+  transition-delay: 200ms;
 }
 
 .tw-duration-300 {
@@ -872,6 +834,14 @@ video {
 
 .tw-duration-200 {
   transition-duration: 200ms;
+}
+
+.tw-duration-150 {
+  transition-duration: 150ms;
+}
+
+.tw-duration-500 {
+  transition-duration: 500ms;
 }
 
 .hover\:tw-bg-ir-orange:hover {
