--- a/src/App.css
+++ b/src/App.css
@@ -777,6 +777,10 @@ video {
   padding: 0.65rem;
 }
 
+.tw-p-5 {
+  padding: 1.25rem;
+}
+
 .tw-px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
